// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Textarea > Textarea autosizeVue demo works fine 1`] = `
<div
  class="t-textarea t-textarea--layout-horizontal"
>
  <div
    class="t-textarea__label"
  >
    标签文字
  </div>
  <div
    class="t-textarea__wrapper"
  >
    <textarea
      class="t-textarea__wrapper-inner t-textarea__placeholder"
      name=""
      placeholder="请输入文字"
      style="caret-color: #0052d9;"
    />
    <!---->
  </div>
</div>
`;

exports[`Textarea > Textarea baseVue demo works fine 1`] = `
<div
  class="t-textarea t-textarea--layout-horizontal textarea-example"
  data-v-b888150c=""
>
  <!---->
  <div
    class="t-textarea__wrapper"
  >
    <textarea
      class="t-textarea__wrapper-inner t-textarea__placeholder"
      name=""
      placeholder="请输入文字"
      style="caret-color: #0052d9;"
    />
    <!---->
  </div>
</div>
`;

exports[`Textarea > Textarea cardVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="textarea-example"
    data-v-7c5f1617=""
  >
    <div
      class="t-textarea t-textarea--layout-vertical textarea"
      data-v-7c5f1617=""
    >
      <div
        class="t-textarea__label"
      >
        标签文字
      </div>
      <div
        class="t-textarea__wrapper"
      >
        <textarea
          class="t-textarea__wrapper-inner t-textarea__placeholder"
          name=""
          placeholder="请输入文字"
          style="caret-color: #0052d9;"
        />
        <div
          class="t-textarea__indicator"
        >
           
          0/500
        </div>
      </div>
    </div>
  </div>
  <div
    class="textarea-example card"
    data-v-7c5f1617=""
  >
    <div
      class="textarea-example__summary"
      data-v-7c5f1617=""
    >
      卡片样式
    </div>
    <div
      class="t-textarea t-textarea--layout-horizontal textarea"
      data-v-7c5f1617=""
    >
      <div
        class="t-textarea__label"
      >
        标签文字
      </div>
      <div
        class="t-textarea__wrapper"
      >
        <textarea
          class="t-textarea__wrapper-inner t-textarea__placeholder"
          name=""
          placeholder="请输入文字"
          style="caret-color: #0052d9;"
        />
        <div
          class="t-textarea__indicator"
        >
           
          0/500
        </div>
      </div>
    </div>
  </div>
  
</div>
`;

exports[`Textarea > Textarea customVue demo works fine 1`] = `
<div
  class="textarea-example"
  data-v-b36a81b3=""
>
  <text
    class="textarea-example__label"
    data-v-b36a81b3=""
  >
    标签文字
  </text>
  <div
    class="t-textarea t-textarea--layout-horizontal t-textarea--border textarea"
    data-v-b36a81b3=""
  >
    <!---->
    <div
      class="t-textarea__wrapper"
    >
      <textarea
        class="t-textarea__wrapper-inner t-textarea__placeholder"
        name=""
        placeholder="请输入文字"
        style="caret-color: #0052d9;"
      />
      <div
        class="t-textarea__indicator"
      >
         
        0/100
      </div>
    </div>
  </div>
</div>
`;

exports[`Textarea > Textarea disabledVue demo works fine 1`] = `
<div
  class="t-textarea t-textarea--layout-horizontal textarea-example"
  data-v-7ec69146=""
>
  <div
    class="t-textarea__label"
  >
    标签文字
  </div>
  <div
    class="t-textarea__wrapper"
  >
    <textarea
      class="t-textarea__wrapper-inner t-textarea__placeholder t-textarea--disabled"
      disabled=""
      name=""
      placeholder="请输入文字"
      style="caret-color: #0052d9;"
    />
    <!---->
  </div>
</div>
`;

exports[`Textarea > Textarea labelVue demo works fine 1`] = `
<div
  class="t-textarea t-textarea--layout-horizontal textarea-example"
  data-v-d234a48f=""
>
  <div
    class="t-textarea__label"
  >
    标签文字
  </div>
  <div
    class="t-textarea__wrapper"
  >
    <textarea
      class="t-textarea__wrapper-inner t-textarea__placeholder"
      name="标签文字"
      placeholder="请输入文字"
      style="caret-color: #0052d9;"
    />
    <!---->
  </div>
</div>
`;

exports[`Textarea > Textarea maxcharacterVue demo works fine 1`] = `
<div
  class="t-textarea t-textarea--layout-horizontal"
>
  <div
    class="t-textarea__label"
  >
    标签文字
  </div>
  <div
    class="t-textarea__wrapper"
  >
    <textarea
      class="t-textarea__wrapper-inner t-textarea__placeholder"
      name="标签文字"
      placeholder="请输入文字"
      style="caret-color: #0052d9;"
    />
    <div
      class="t-textarea__indicator"
    >
       
      0/500
    </div>
  </div>
</div>
`;

exports[`Textarea > Textarea maxlengthVue demo works fine 1`] = `
<div
  class="t-textarea t-textarea--layout-horizontal"
>
  <div
    class="t-textarea__label"
  >
    标签文字
  </div>
  <div
    class="t-textarea__wrapper"
  >
    <textarea
      class="t-textarea__wrapper-inner t-textarea__placeholder"
      name="标签文字"
      placeholder="请输入文字"
      style="caret-color: #0052d9;"
    />
    <div
      class="t-textarea__indicator"
    >
       
      0/500
    </div>
  </div>
</div>
`;

exports[`Textarea > Textarea mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Textarea 多行文本框
  </h1>
  <p
    class="summary"
  >
    用于多行文本的输入
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        基础多行文本框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-textarea t-textarea--layout-horizontal textarea-example"
        data-v-b888150c=""
      >
        <!---->
        <div
          class="t-textarea__wrapper"
        >
          <textarea
            class="t-textarea__wrapper-inner t-textarea__placeholder"
            name=""
            placeholder="请输入文字"
            style="caret-color: #0052d9;"
          />
          <!---->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带标题多行文本框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-textarea t-textarea--layout-horizontal textarea-example"
        data-v-d234a48f=""
      >
        <div
          class="t-textarea__label"
        >
          标签文字
        </div>
        <div
          class="t-textarea__wrapper"
        >
          <textarea
            class="t-textarea__wrapper-inner t-textarea__placeholder"
            name="标签文字"
            placeholder="请输入文字"
            style="caret-color: #0052d9;"
          />
          <!---->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        自动增高多行文本框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-textarea t-textarea--layout-horizontal"
      >
        <div
          class="t-textarea__label"
        >
          标签文字
        </div>
        <div
          class="t-textarea__wrapper"
        >
          <textarea
            class="t-textarea__wrapper-inner t-textarea__placeholder"
            name=""
            placeholder="请输入文字"
            style="caret-color: #0052d9;"
          />
          <!---->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        设置字符数限制
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-textarea t-textarea--layout-horizontal"
      >
        <div
          class="t-textarea__label"
        >
          标签文字
        </div>
        <div
          class="t-textarea__wrapper"
        >
          <textarea
            class="t-textarea__wrapper-inner t-textarea__placeholder"
            name="标签文字"
            placeholder="请输入文字"
            style="caret-color: #0052d9;"
          />
          <div
            class="t-textarea__indicator"
          >
             
            0/500
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <!--v-if-->
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-textarea t-textarea--layout-horizontal"
      >
        <div
          class="t-textarea__label"
        >
          标签文字
        </div>
        <div
          class="t-textarea__wrapper"
        >
          <textarea
            class="t-textarea__wrapper-inner t-textarea__placeholder"
            name="标签文字"
            placeholder="请输入文字"
            style="caret-color: #0052d9;"
          />
          <div
            class="t-textarea__indicator"
          >
             
            0/500
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件状态
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        禁用状态
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-textarea t-textarea--layout-horizontal textarea-example"
        data-v-7ec69146=""
      >
        <div
          class="t-textarea__label"
        >
          标签文字
        </div>
        <div
          class="t-textarea__wrapper"
        >
          <textarea
            class="t-textarea__wrapper-inner t-textarea__placeholder t-textarea--disabled"
            disabled=""
            name=""
            placeholder="请输入文字"
            style="caret-color: #0052d9;"
          />
          <!---->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 组件样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        竖排样式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="textarea-example"
        data-v-7c5f1617=""
      >
        <div
          class="t-textarea t-textarea--layout-vertical textarea"
          data-v-7c5f1617=""
        >
          <div
            class="t-textarea__label"
          >
            标签文字
          </div>
          <div
            class="t-textarea__wrapper"
          >
            <textarea
              class="t-textarea__wrapper-inner t-textarea__placeholder"
              name=""
              placeholder="请输入文字"
              style="caret-color: #0052d9;"
            />
            <div
              class="t-textarea__indicator"
            >
               
              0/500
            </div>
          </div>
        </div>
      </div>
      <div
        class="textarea-example card"
        data-v-7c5f1617=""
      >
        <div
          class="textarea-example__summary"
          data-v-7c5f1617=""
        >
          卡片样式
        </div>
        <div
          class="t-textarea t-textarea--layout-horizontal textarea"
          data-v-7c5f1617=""
        >
          <div
            class="t-textarea__label"
          >
            标签文字
          </div>
          <div
            class="t-textarea__wrapper"
          >
            <textarea
              class="t-textarea__wrapper-inner t-textarea__placeholder"
              name=""
              placeholder="请输入文字"
              style="caret-color: #0052d9;"
            />
            <div
              class="t-textarea__indicator"
            >
               
              0/500
            </div>
          </div>
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        04 特殊样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        标签外置输入框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="textarea-example"
        data-v-b36a81b3=""
      >
        <text
          class="textarea-example__label"
          data-v-b36a81b3=""
        >
          标签文字
        </text>
        <div
          class="t-textarea t-textarea--layout-horizontal t-textarea--border textarea"
          data-v-b36a81b3=""
        >
          <!---->
          <div
            class="t-textarea__wrapper"
          >
            <textarea
              class="t-textarea__wrapper-inner t-textarea__placeholder"
              name=""
              placeholder="请输入文字"
              style="caret-color: #0052d9;"
            />
            <div
              class="t-textarea__indicator"
            >
               
              0/100
            </div>
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;
